Update V7 docker
